--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   table_calendar: ^2.3.2
   grouped_list: ^3.7.1
+  collection: ^1.14.13
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  provider: ^4.2.3+3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -52,7 +56,7 @@ flutter:
     - assets/images/apra_logo.jpg
     - assets/images/apra_no_back.png
     - assets/images/aapra.jpg
-    - assets/apra_printing.json
+    - assets/apracs_printing.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
