Implementato l'acquisizione del file json con servizio Http verificato funzionamento

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.apra_printing">
-   <application
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
         android:label="apra_printing"
         android:icon="@mipmap/ic_launcher">
         <activity
