--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   collection: ^1.14.13
   equatable: ^1.2.5
   intl: ^0.16.1
+  flutter_local_notifications: ^3.0.3
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,7 +40,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   provider: ^4.2.3+3
-  flutter_local_notifications: ^3.0.1
 
 
 # For information on the generic Dart part of this file, see the
