--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   intl: ^0.16.1
   flutter_local_notifications: ^3.0.3
   http: ^0.12.2
+  flutter_search_bar: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
